src/metrics/snapshots/big_code_analysis__metrics__loc__tests__typescript_blank.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 5.0,
  "ploc": 3.0,
  "lloc": 1.0,
  "cloc": 0.0,
  "blank": 2.0,
  "sloc_average": 2.5,
  "ploc_average": 1.5,
  "lloc_average": 0.5,
  "cloc_average": 0.0,
  "blank_average": 1.0,
  "sloc_min": 5.0,
  "sloc_max": 5.0,
  "cloc_min": 0.0,
  "cloc_max": 0.0,
  "ploc_min": 3.0,
  "ploc_max": 3.0,
  "lloc_min": 1.0,
  "lloc_max": 1.0,
  "blank_min": 2.0,
  "blank_max": 2.0
}
