src/metrics/snapshots/big_code_analysis__metrics__loc__tests__typescript_multiple_functions_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 9,
  "ploc": 9,
  "lloc": 3,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 2.25,
  "ploc_average": 2.25,
  "lloc_average": 0.75,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 3,
  "sloc_max": 9,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 3,
  "ploc_max": 9,
  "lloc_min": 1,
  "lloc_max": 3,
  "blank_min": 0,
  "blank_max": 0
}
